Table configuraciones{

    id int [pk, increment]
    nombre varchar
    descripcion varchar
    direccion varchar
    telefono varchar
    divisa varchar
    correo_electronico varchar
    web varchar
    logo varchar
    created_at timestamp
    updated_at timestamp
}

Table gestiones{
    id int [pk, increment]
    nombre varchar
    created_at timestamp
    updated_at timestamp
}

Table periodos{
    id int [pk, increment]
    nombre varchar
    gestion_id int [ref: > gestiones.id]
    created_at timestamp
    updated_at timestamp
}

Table niveles{
    id int [pk, increment]
    nombre varchar
    created_at timestamp
    updated_at timestamp
}

Table grados{
    id int [pk, increment]
    nombre varchar
    nivel_id int [ref: > niveles.id]
    created_at timestamp
    updated_at timestamp
}


Table paralelos{
    id int [pk, increment]
    nombre varchar
    grado_id int [ref: > grados.id]
    created_at timestamp
    updated_at timestamp
}


Table turnos{
    id int [pk, increment]
    nombre varchar
    created_at timestamp
    updated_at timestamp
}

Table materias{
    id int [pk, increment]
    nombre varchar
    created_at timestamp
    updated_at timestamp
}

Table users{
    id int [pk, increment]
    name varchar
    email varchar
    password varchar
    created_at timestamp
    updated_at timestamp
}

Table personal{
    id int [pk, increment]
    usuario_id int [ref: > users.id]
    tipo varchar
    nombres varchar
    apellidos varchar
    ci varchar
    fecha_nacimiento date
    direccion varchar
    telefono varchar
    profesion varchar
    foto varchar
    created_at timestamp
    updated_at timestamp
}
